--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         
         <section id="about">
             <h2>About Me</h2>
-            <p>Write a short bio about yourself here!</p>
+            <p>I love my dog and playing piano!</p>
         </section>
         
         <section id="projects">
